Izvajanje delovnih zvezkov na predavanjih

--- a/predavanja/jupyter/python-sqlite.ipynb
+++ b/predavanja/jupyter/python-sqlite.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "import sqlite3 as dbapi\n",
     "povezava = dbapi.connect(\"bbc.db\")\n",
-    "kazalec = povezava.cursor()"
+    "#kazalec = povezava.cursor()"
    ]
   },
   {
@@ -37,22 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ProgrammingError",
-     "evalue": "Cannot operate on a closed cursor.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-89237ad4294a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msql\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"SELECT * FROM bbc WHERE region = 'Europe'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mkazalec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m)\u001b[0m        \u001b[0;31m# izvedemo ukaz\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mProgrammingError\u001b[0m: Cannot operate on a closed cursor."
-     ]
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f24c8421110>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "kazalec = povezava.cursor()\n",
     "sql = \"SELECT * FROM bbc WHERE region = 'Europe'\"\n",
     "kazalec.execute(sql)        # izvedemo ukaz"
    ]
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -210,64 +212,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Albania 28728\n",
-      "Andorra 468\n",
-      "Armenia 29743\n",
-      "Austria 83871\n",
-      "Azerbaijan 86600\n",
-      "Belarus 207595\n",
-      "Belgium 30528\n",
-      "Bosnia-Hercegovina 51129\n",
-      "Bulgaria 110994\n",
-      "Croatia 56594\n",
-      "Cyprus 9250\n",
-      "Czech Republic 78866\n",
-      "Denmark 43098\n",
-      "Estonia 45227\n",
-      "Finland 338145\n",
-      "Former Yugoslav Republic of Macedonia 25713\n",
-      "France 543965\n",
-      "Georgia 69700\n",
-      "Germany 357027\n",
-      "Greece 131957\n",
-      "Hungary 93030\n",
-      "Iceland 103000\n",
-      "Ireland 70182\n",
-      "Italy 301338\n",
-      "Latvia 64589\n",
-      "Liechtenstein 160\n",
-      "Lithuania 65300\n",
-      "Luxembourg 2586\n",
-      "Malta 316\n",
-      "Moldova 33800\n",
-      "Monaco 2\n",
-      "Norway 323759\n",
-      "Poland 312685\n",
-      "Portugal 92345\n",
-      "Romania 238391\n",
-      "Russia 17000000\n",
-      "San Marino 61\n",
-      "Serbia and Montenegro 102173\n",
-      "Slovakia 49033\n",
-      "Slovenia 20273\n",
-      "Spain 505988\n",
-      "Sweden 449964\n",
-      "Switzerland 41284\n",
-      "The Netherlands 41864\n",
-      "Turkey 779452\n",
-      "Ukraine 603700\n",
-      "United Kingdom 242514\n",
-      "Vatican 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for ime, regija, povrsina, prebivalstvo, bdp in kazalec:\n",
     "    print(ime, povrsina)"
@@ -282,18 +229,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "ename": "ProgrammingError",
-     "evalue": "Cannot operate on a closed cursor.",
+     "evalue": "Cannot operate on a closed database.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-4eb950dff5c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkazalec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchone\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mProgrammingError\u001b[0m: Cannot operate on a closed cursor."
+      "\u001b[0;32m<ipython-input-27-4eb950dff5c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkazalec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchone\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m: Cannot operate on a closed database."
      ]
     }
    ],
@@ -303,16 +250,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Bosnia-Hercegovina', 'Europe', 51129, 4200000, 8568000000)"
+       "('Bulgaria', 'Europe', 110994, 7800000, 21372000000)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,14 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bulgaria 21372000000\n",
       "Croatia 28996000000\n",
       "Cyprus 14187060000\n",
       "Czech Republic 93330000000\n",
@@ -392,9 +338,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "Cannot operate on a closed database.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-71531e33901e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkazalec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mpovezava\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mProgrammingError\u001b[0m: Cannot operate on a closed database."
+     ]
+    }
+   ],
    "source": [
     "kazalec.close()\n",
     "povezava.close()"
@@ -409,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -523,22 +481,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Napaka: UNIQUE constraint failed: test.id\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sqlite3 as dbapi\n",
     "conn = dbapi.connect(\"testdb.sqlite\")\n",
     "cur = conn.cursor()\n",
     "try:\n",
+    "    #cur.execute(\"INSERT INTO test (id, num, data) VALUES (1, 400, 'nekaj drugega');\")\n",
     "    with conn:\n",
     "        cur.execute(\"INSERT INTO test (num, data) VALUES (100, 'prva vrstica');\")\n",
     "        cur.execute(\"\"\"\n",
@@ -559,16 +510,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 100, 'KU-KU')]"
+       "[(1, 100, 'prva vrstica'),\n",
+       " (2, 200, 'kaj pa zdaj?'),\n",
+       " (3, 300, 'še nekaj'),\n",
+       " (4, 100, 'prva vrstica'),\n",
+       " (5, 200, 'kaj pa zdaj?'),\n",
+       " (6, 300, 'še nekaj'),\n",
+       " (7, 400, 'nekaj drugega'),\n",
+       " (8, 100, 'prva vrstica'),\n",
+       " (100, 200, 'kaj pa zdaj?'),\n",
+       " (101, 300, 'še nekaj'),\n",
+       " (102, 100, 'prva vrstica'),\n",
+       " (200, 200, 'kaj pa zdaj?'),\n",
+       " (201, 300, 'še nekaj')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +603,7 @@
        "('Slovenia', 'Europe', 20273, 2000000, 29620000000)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +720,7 @@
        " ('Uruguay', 'South America', 176215, 3500000, None)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +775,7 @@
        "  12213000000000)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +922,7 @@
        "(2, 0)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +999,7 @@
        "(1, 1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1064,8 +1027,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-d166320ae54c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprijava_slaba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"franci\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ges'lce\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-21-309431ea066c>\u001b[0m in \u001b[0;36mprijava_slaba\u001b[0;34m(conn, uporabnisko_ime, geslo)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         cur.execute(f\"\"\"\n\u001b[0m\u001b[1;32m      5\u001b[0m               \u001b[0mSELECT\u001b[0m \u001b[0mid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madmin\u001b[0m \u001b[0mFROM\u001b[0m \u001b[0muporabnik\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                \u001b[0mWHERE\u001b[0m \u001b[0muporabnisko_ime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'{uporabnisko_ime}'\u001b[0m \u001b[0mAND\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-63-d166320ae54c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprijava_slaba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"franci\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ges'lce\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-58-309431ea066c>\u001b[0m in \u001b[0;36mprijava_slaba\u001b[0;34m(conn, uporabnisko_ime, geslo)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mcur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         cur.execute(f\"\"\"\n\u001b[0m\u001b[1;32m      5\u001b[0m               \u001b[0mSELECT\u001b[0m \u001b[0mid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madmin\u001b[0m \u001b[0mFROM\u001b[0m \u001b[0muporabnik\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                \u001b[0mWHERE\u001b[0m \u001b[0muporabnisko_ime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'{uporabnisko_ime}'\u001b[0m \u001b[0mAND\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mOperationalError\u001b[0m: near \"lce\": syntax error"
      ]
     }
@@ -1083,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1084,7 @@
        "(2, 0)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
