--- a/predavanja/jupyter/bottle.ipynb
+++ b/predavanja/jupyter/bottle.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,34 +74,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Klic funkcije vsota_pocasna(100000000) je trajal 4996.07 ms.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5000000050000000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "vsota_pocasna(10**7)"
+    "vsota_pocasna(10**8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Klic funkcije vsota_hitra(100000000) je trajal 0.00 ms.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5000000050000000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "vsota_hitra(10**7)"
+    "vsota_hitra(10**8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Klic funkcije primerjaj(n=1000000, m=10000000) je trajal 52.74 ms.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "primerjaj(n=10**7, m=10**6)"
+    "primerjaj(n=10**6, m=10**7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +175,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/janos/fmf/pb1/podatkovne-baze-1/repos/podatkovne-baze-1/predavanja/jupyter/bottle.py:919: RuntimeWarning: Route <GET /static/<datoteka:path>> overwrites a previously defined route\n",
+      "  self.add_route(route)\n",
+      "/home/janos/fmf/pb1/podatkovne-baze-1/repos/podatkovne-baze-1/predavanja/jupyter/bottle.py:919: RuntimeWarning: Route <GET /pozdravi/<ime>/<priimek>/> overwrites a previously defined route\n",
+      "  self.add_route(route)\n",
+      "/home/janos/fmf/pb1/podatkovne-baze-1/repos/podatkovne-baze-1/predavanja/jupyter/bottle.py:919: RuntimeWarning: Route <GET /pozdravi/<ime>/> overwrites a previously defined route\n",
+      "  self.add_route(route)\n",
+      "/home/janos/fmf/pb1/podatkovne-baze-1/repos/podatkovne-baze-1/predavanja/jupyter/bottle.py:919: RuntimeWarning: Route <GET /kvadriraj/<n:int>> overwrites a previously defined route\n",
+      "  self.add_route(route)\n",
+      "/home/janos/fmf/pb1/podatkovne-baze-1/repos/podatkovne-baze-1/predavanja/jupyter/bottle.py:919: RuntimeWarning: Route <GET /kvadriraj/<n:float>> overwrites a previously defined route\n",
+      "  self.add_route(route)\n",
+      "/home/janos/fmf/pb1/podatkovne-baze-1/repos/podatkovne-baze-1/predavanja/jupyter/bottle.py:919: RuntimeWarning: Route <GET /pozdravi_predloga/<ime>/> overwrites a previously defined route\n",
+      "  self.add_route(route)\n",
+      "Bottle v0.14-dev server starting up (using WSGIRefServer())...\n",
+      "Listening on http://127.0.0.1:8080/\n",
+      "Hit Ctrl-C to quit.\n",
+      "\n",
+      "127.0.0.1 - - [03/Dec/2024 10:15:27] \"GET /pozdravi_predloga/svet/ HTTP/1.1\" 200 271\n",
+      "127.0.0.1 - - [03/Dec/2024 10:15:27] \"GET /favicon.ico HTTP/1.1\" 404 748\n"
+     ]
+    }
+   ],
    "source": [
     "import bottle\n",
     "import os\n",
@@ -182,9 +261,10 @@
     "    try:\n",
     "        a = int(bottle.request.query.a)\n",
     "        b = int(bottle.request.query.b)\n",
-    "        return f'{a} + {b} = {a + b}'\n",
-    "    except ValueError:\n",
-    "        bottle.abort(400, \"Vnesi dve celi števili!\")\n",
+    "        #return f'{a} + {b} = {a + b}'\n",
+    "        bottle.redirect(APP_PREFIX + f'/kvadriraj/{a + b}')\n",
+    "    except ValueError as ex:\n",
+    "        bottle.abort(400, f\"Vnesi dve celi števili! Napaka: {type(ex)}\")\n",
     "\n",
     "bottle.BaseTemplate.defaults['povecaj'] = lambda x: x+1\n",
     "\n",
