Spremembe primerov v delovnih zvezkih

--- a/predavanja/filmi/filmi.ipynb
+++ b/predavanja/filmi/filmi.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,9 @@
       "Kaj bi rad delal?\n",
       "1) Iskal osebo\n",
       "2) Pogledal dobre filme\n",
-      "3) Šel domov\n"
+      "3) Šel domov\n",
+      "> \n",
+      "Adijo!\n"
      ]
     }
    ],
