--- a/predavanja/jupyter/bottle.ipynb
+++ b/predavanja/jupyter/bottle.ipynb
@@ -119,9 +119,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bottle v0.14-dev server starting up (using WSGIRefServer())...\n",
+      "Listening on http://127.0.0.1:8080/\n",
+      "Hit Ctrl-C to quit.\n",
+      "\n",
+      "127.0.0.1 - - [22/Dec/2025 10:42:41] \"GET /sestej/?a=23&b=42 HTTP/1.1\" 200 12\n",
+      "127.0.0.1 - - [22/Dec/2025 10:42:54] \"GET /sestej/?a=23&b=42i HTTP/1.1\" 400 797\n",
+      "127.0.0.1 - - [22/Dec/2025 10:45:13] \"GET /sestej/?a=23%26&b=42%3D HTTP/1.1\" 400 802\n",
+      "127.0.0.1 - - [22/Dec/2025 10:47:57] \"POST /obrazec/ HTTP/1.1\" 303 0\n",
+      "127.0.0.1 - - [22/Dec/2025 10:47:57] \"GET /obrazec HTTP/1.1\" 200 773\n",
+      "127.0.0.1 - - [22/Dec/2025 10:47:57] \"GET /static/css/stil.css HTTP/1.1\" 304 0\n",
+      "127.0.0.1 - - [22/Dec/2025 10:55:30] \"POST /obrazec/ HTTP/1.1\" 303 0\n",
+      "127.0.0.1 - - [22/Dec/2025 10:55:30] \"GET /obrazec HTTP/1.1\" 200 773\n",
+      "127.0.0.1 - - [22/Dec/2025 10:55:30] \"GET /static/css/stil.css HTTP/1.1\" 304 0\n",
+      "127.0.0.1 - - [22/Dec/2025 11:04:00] \"POST /odjava/ HTTP/1.1\" 303 0\n",
+      "127.0.0.1 - - [22/Dec/2025 11:04:00] \"GET /obrazec HTTP/1.1\" 200 753\n",
+      "127.0.0.1 - - [22/Dec/2025 11:04:00] \"GET /static/css/stil.css HTTP/1.1\" 304 0\n",
+      "127.0.0.1 - - [22/Dec/2025 11:23:09] \"GET /primer HTTP/1.1\" 200 460\n",
+      "127.0.0.1 - - [22/Dec/2025 11:23:09] \"GET /static/css/stil.css HTTP/1.1\" 304 0\n",
+      "127.0.0.1 - - [22/Dec/2025 11:24:25] \"GET /obrazec HTTP/1.1\" 200 753\n",
+      "127.0.0.1 - - [22/Dec/2025 11:25:21] \"GET /pozdravi/svet/ HTTP/1.1\" 200 30\n",
+      "127.0.0.1 - - [22/Dec/2025 11:25:23] \"GET /pozdravi_predloga/svet/ HTTP/1.1\" 200 255\n",
+      "127.0.0.1 - - [22/Dec/2025 11:25:23] \"GET /pozdravi_predloga/svet/static/css/stil.css HTTP/1.1\" 404 810\n",
+      "127.0.0.1 - - [22/Dec/2025 11:25:27] \"GET /kvadriraj/42 HTTP/1.1\" 200 11\n",
+      "127.0.0.1 - - [22/Dec/2025 11:25:29] \"GET /primer HTTP/1.1\" 200 460\n",
+      "127.0.0.1 - - [22/Dec/2025 11:25:38] \"GET /primer HTTP/1.1\" 200 460\n"
+     ]
+    }
+   ],
    "source": [
     "import bottle\n",
     "import os\n",
@@ -182,8 +214,8 @@
     "    try:\n",
     "        a = int(bottle.request.query.a)\n",
     "        b = int(bottle.request.query.b)\n",
-    "        #return f'{a} + {b} = {a + b}'\n",
-    "        bottle.redirect(APP_PREFIX + f'/kvadriraj/{a + b}')\n",
+    "        return f'{a} + {b} = {a + b}'\n",
+    "        #bottle.redirect(APP_PREFIX + f'/kvadriraj/{a + b}')\n",
     "    except ValueError as ex:\n",
     "        bottle.abort(400, f\"Vnesi dve celi števili! Napaka: {type(ex)}\")\n",
     "\n",
